Project

General

Profile

Actions

Bug #22473

closed

multisite: 'radosgw-admin sync error list' contains temporary EBUSY errors

Added by Casey Bodley over 6 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Multisite sync encounters temporary EBUSY errors in normal operation, and will gracefully retry the operations until success. These temporary errors get written to the sync.error-log objects (visible via 'radosgw-admin sync error list').

The 'radosgw-admin sync error list' command should only contain actual sync errors that could require admin intervention. Including temporary EBUSY errors only serves to waste space in rados and obscure the more serious sync errors.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #22581: luminous: multisite: 'radosgw-admin sync error list' contains temporary EBUSY errorsResolvedNathan CutlerActions
Copied to rgw - Backport #22582: jewel: multisite: 'radosgw-admin sync error list' contains temporary EBUSY errorsResolvedPrashant DActions
Actions #1

Updated by Casey Bodley over 6 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Matt Benjamin over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22581: luminous: multisite: 'radosgw-admin sync error list' contains temporary EBUSY errors added
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22582: jewel: multisite: 'radosgw-admin sync error list' contains temporary EBUSY errors added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF